[package]
name = "cards"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
tui = "0.19.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.89"
